Aggiunta function.hpp e modifica main e CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,7 @@ list(APPEND LinearSystem_INCLUDE ${LinearSystem_includes})
 ################################################################################
 add_executable(${PROJECT_NAME}
       main.cpp
+      function.hpp
       ${LinearSystem_SOURCES}
       ${LinearSystem_HEADERS})
 
